# arafix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml  rename.sh
.github/workflows/: ci.yml  publish.yml
examples/: make_broken_pdf.py  quickstart.py
src/arafix/: __init__.py  cli.py  cmap.py  diagnose.py  evaluate.py  lamalef.py  normalize.py  order.py  pipeline.py  types.py  unicode_tables.py
src/arafix/extractors/: __init__.py  base.py  pymupdf_extractor.py
tests/: test_arafix.py  test_integration_pdf.py
