[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arafix"
version = "0.6.0"
description = "استرجاع النص العربي من ملفات PDF المعطوبة — تشخيص أولاً، ثم علاج مُتدرّج"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "bio-colab" }]
keywords = ["arabic", "pdf", "text-extraction", "rtl", "unicode", "bidi", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: Arabic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]

# النواة بلا تبعيّات — عمداً.
# الدرجتان ٠ و١ و٢ بايثون قياسيّ خالص، فتعمل في أيّ بيئة مقيّدة.
dependencies = []

[project.optional-dependencies]
pdf = ["pymupdf>=1.23"]        # الدرجة ٠–٢ على ملفات PDF
cmap = ["fonttools>=4.40"]     # الدرجة ٣
# لا حزمة «ocr» هنا عمداً: الدرجة ٤ غير منفَّذة، و`extra` يوحي بقدرةٍ
# غير موجودة. لا نبيع تبعيّةً مقابل وعد.
all = ["pymupdf>=1.23", "fonttools>=4.40"]
dev = ["pymupdf>=1.23", "fonttools>=4.40", "pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
arafix = "arafix.cli:main"

[project.urls]
Homepage = "https://github.com/bio-colab/arafix"
Issues = "https://github.com/bio-colab/arafix/issues"
Changelog = "https://github.com/bio-colab/arafix/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
# تُشحن الاختبارات والأمثلة داخل الـ sdist عمداً: مَن حمّل المصدر يجب أن
# يستطيع تشغيل `pytest` عليه فيتحقق بنفسه، لا أن يصدّق شهادتنا.
include = [
    "src/",
    "tests/",
    "examples/",
    "README.md",
    "CHANGELOG.md",
    "RELEASING.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arafix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --doctest-modules --doctest-glob=''"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
